// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MeetingCardContainerStatus /> snapshot should match snapshot 1`] = `
<div>
  <div
    class="md-meeting-card-container-status-wrapper"
  />
</div>
`;

exports[`<MeetingCardContainerStatus /> snapshot should match snapshot with class name 1`] = `
<div>
  <div
    class="example-class md-meeting-card-container-status-wrapper"
  />
</div>
`;

exports[`<MeetingCardContainerStatus /> snapshot should match snapshot with color 1`] = `
<div>
  <div
    class="md-meeting-card-container-status-wrapper"
    data-color="success"
  />
</div>
`;

exports[`<MeetingCardContainerStatus /> snapshot should match snapshot with id 1`] = `
<div>
  <div
    class="md-meeting-card-container-status-wrapper"
    id="example-id"
  />
</div>
`;

exports[`<MeetingCardContainerStatus /> snapshot should match snapshot with striped 1`] = `
<div>
  <div
    class="md-meeting-card-container-status-wrapper"
    data-striped="true"
  />
</div>
`;

exports[`<MeetingCardContainerStatus /> snapshot should match snapshot with style 1`] = `
<div>
  <div
    class="md-meeting-card-container-status-wrapper"
    style="color: pink;"
  />
</div>
`;
